@@ -74,12 +74,15 @@ Trunk -  Unreleased
     HIVE-1455. lateral view does not work with column pruning
     (Paul Yang via He Yongqiang)
 
+    HIVE-1470. percentile_approx() fails with more than 1 reducer
+    (Mayank Lahiri via jvs)
+
   TESTS
 
     HIVE-1464. improve  test query performance
     (Joydeep Sen Sarma via Ning Zhang)
 
-    HIVE-1475. .gitignore files being placed in test warehouse directories 
+    HIVE-1475. .gitignore files being placed in test warehouse directories
     causing build failure
     (Joydeep Sen Sarma via Ning Zhang)
 
